compact-memberlist: fix forum search bar overlapping onto memberlist

--- a/snippets/compact-memberlist.css
+++ b/snippets/compact-memberlist.css
@@ -2,6 +2,7 @@
     width: 64px !important;
     min-width: 64px;
     justify-content: flex-start;
+    z-index: 1;
 }
 
 .f75fb00fb7356cbe-content > :is(.c8ffbb79449f399c-container, .c8ffbb79449f399c-membersWrap) > * {
